--- a/shop.html
+++ b/shop.html
@@ -34,7 +34,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <>
    
     <div class="header-area">
         <div class="container">
@@ -443,5 +443,7 @@
     
     <!-- Main Script -->
     <script src="js/main.js"></script>
+
+    <script src="js/shop.js"></script>
   </body>
 </html>
